test/unit/syntax-err/output.js
[
  "test/unit/syntax-err/input.js"
]